...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/item_list_meeting1"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="@color/colorIconographyTypographyBlack"
...
